Add pre-upgrade script to be run on first master.
Script currently just checks for port names that are no longer valid. In theory
other checks may be added to this script in the future. Script was originally
written by Steve Milner and Andy Goldstein.

If the script fails, ansible seems to handle this nicely by default, exiting
the upgrade and displaying stderr and stdout, both of which contain useful info
on what the problem was.

--- a/playbooks/adhoc/upgrades/upgrade.yml
+++ b/playbooks/adhoc/upgrades/upgrade.yml
@@ -13,6 +13,13 @@
     - fail: msg="Deployment type enterprise not supported for upgrade"
       when: deployment_type == "enterprise"
 
+- name: Run pre-upgrade checks on first master
+  hosts: masters[0]
+  tasks:
+  # If this script errors out ansible will show the default stdout/stderr
+  # which contains details for the user:
+  - script: files/pre-upgrade-check
+
 - name: Evaluate etcd_hosts
   hosts: localhost
   tasks:
