added network checks.  also updated item prototype code to support more

--- a/roles/lib_zabbix/tasks/create_template.yml
+++ b/roles/lib_zabbix/tasks/create_template.yml
@@ -84,6 +84,10 @@
     template_name: "{{ template.name }}"
     applications: "{{ item.applications }}"
     description: "{{ item.description | default('', True) }}"
+    multiplier: "{{ item.multiplier | default('', True) }}"
+    units: "{{ item.units | default('', True) }}"
+    interval: "{{ item.interval | default(60, True) }}"
+    delta: "{{ item.delta | default(0, True) }}"
   with_items: template.zitemprototypes
   when: template.zitemprototypes is defined
 
