Read etcd data dir from appropriate config file.
Rather than assuming the etcd data dir, we now read if from master-config.yaml
if using embedded etcd, otherwise from etcd.conf.

Doing so now required use of PyYAML to parse config file when gathering facts.

Fixed discrepancy with data_dir fact and openshift-enterprise deployment_type.

--- a/playbooks/adhoc/upgrades/upgrade.yml
+++ b/playbooks/adhoc/upgrades/upgrade.yml
@@ -150,7 +150,7 @@
 
     - name: Ensure python-yaml present for config upgrade
       yum:
-        pkg: python-yaml
+        pkg: PyYAML
         state: installed
 
     - name: Upgrade master configuration
